--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.10.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
