--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.514.0",
