--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-swipeable": "^7.0.2",
     "react-swipeable-list": "^1.10.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
