--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.10.0",
+    "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.5",
