--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
-    "framer-motion": "^12.23.5",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.514.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-confirm-alert": "^3.0.6",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-swipeable": "^7.0.2",
     "react-swipeable-list": "^1.10.0",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.29.1",
     "recharts": "^3.1.0",
     "yup": "^1.6.1"
   },
