--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
+    "firebase": "^12.0.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.514.0",
